--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "vercel-start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node scripts/seedData.js",
     "setup-env": "node create-env.js"
